# stau

./: .gitignore  .releaserc.json  .yamlfmt  CHANGELOG.md  Cargo.toml  LICENSE  README.md  codecov.yml
.github/workflows/: ci.yml  release.yml
src/: config.rs  error.rs  main.rs  package.rs  script.rs  symlink.rs
tests/: integration_test.rs
