[package]
name = "stau"
version = "1.0.1"
edition = "2024"
license = "MIT"
authors = ["mhalder"]
repository = "https://github.com/mhalder/stau"
homepage = "https://github.com/mhalder/stau"
documentation = "https://github.com/mhalder/stau#readme"
description = "A modern dotfile manager with GNU Stow-style symlink management and automated setup scripts"
readme = "README.md"
keywords = ["dotfiles", "symlink", "stow", "configuration", "cli"]
categories = ["command-line-utilities", "config"]

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.13"
